@@ -10,6 +10,7 @@ Version 5.9.20
 - Inline assembly can now access multiple longs of large local variables.
 - More fixes to C struct initialization
 - Made debug output and C library output work better together
+- Made repeat loops in Spin2 finish with the same value as in PNut
 - Optimized initializers of large local variables
 - Optimized long fills on P2 with SETQ (thanks to Ada Gottensträter again!)
 - Remove unused methods even at -O0 optimization
